[gd_scene load_steps=7 format=2]

[ext_resource path="res://styles/style_button_hover.tres" type="StyleBox" id=1]
[ext_resource path="res://styles/font_main_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://styles/style_button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/style_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/font_button.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/ui/MainMenu.gd" type="Script" id=6]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 1326.0
margin_bottom = 728.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1286.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Sokoban"
align = 1

[node name="MenuContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 1286.0
margin_bottom = 444.0
custom_constants/margin_right = 510
custom_constants/margin_top = 100
custom_constants/margin_left = 510

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MenuContainer"]
margin_left = 510.0
margin_top = 100.0
margin_right = 776.0
margin_bottom = 360.0
custom_constants/separation = 10

[node name="Play" type="Button" parent="VBoxContainer/MenuContainer/VBoxContainer"]
margin_right = 266.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Play"

[node name="Help" type="Button" parent="VBoxContainer/MenuContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 266.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Help"

[node name="Exit" type="Button" parent="VBoxContainer/MenuContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 266.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Exit"
[connection signal="pressed" from="VBoxContainer/MenuContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
